# photo-ai-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN-excel-master.md  PLAN-master-matching.md  PLAN.md  README.md  package-lock.json  package.json  playwright.config.ts
.claude/epics/cache-improvement/: epic.md
.claude/epics/interactive-station-input/: 001.md  002.md  003.md  004.md  005.md  epic.md
.claude/epics/progress-display/: epic.md
.claude/epics/two-stage-analysis-shared/: 001-prompts.md  002-parser.md  003-analyzer.md  004-lib-export.md  005-cli-refactor.md  006-web-implementation.md  007-test-verify.md  008-web-js-frozen.md  epic.md
.claude/epics/web-gemini-analyzer/: epic.md
.claude/rules/: construction-hierarchy.md
.github/workflows/: ci.yml  codeql.yml  deploy.yml  pages.yml
common/: Cargo.toml
common/src/: alias.rs  analyzer.rs  error.rs  excel.rs  hierarchy.rs  layout.rs  layout_generated.rs  lib.rs  parser.rs  prompts.rs  step2.rs  types.rs
common/src/export/: excel_core.rs  mod.rs  pdf_core.rs
desktop-rust/: Cargo.toml
desktop-rust/src/: app.rs  io.rs  main.rs  model.rs
desktop_flutter/: README.md  pubspec.yaml
desktop_flutter/android/app/: build.gradle
desktop_flutter/ios/Runner/: Info.plist
desktop_flutter/ios/Runner.xcodeproj/: project.pbxproj
desktop_flutter/lib/: main.dart
desktop_flutter/linux/: CMakeLists.txt  my_application.cc
desktop_flutter/test/: widget_test.dart
desktop_flutter/web/: index.html
desktop_flutter/windows/: CMakeLists.txt
docs/: ARCHITECTURE.md  CONFIG.md  TROUBLESHOOTING.md
docs/flutter/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js
master/: construction_hierarchy.csv
master/by_work_type/: 人孔改良工.csv  仮設工.csv  区画線工.csv  排水構造物工.csv  構造物撤去工.csv  舗装工.csv  舗装補修工.csv  道路土工.csv
scripts/: review-commit.sh
src/: ai_provider.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  master_selector.rs  station.rs
src/analyzer/: cache.rs  claude_cli.rs  mod.rs  types.rs
src/export/: excel.rs  layout.rs  mod.rs  pdf.rs  photo_xml.rs
src/matcher/: alias.rs  mod.rs  types.rs
src/normalizer/: measurements.rs  mod.rs  station.rs  work_type.rs
src/scanner/: exif.rs  mod.rs
tests/: cache_test.rs  error_test.rs  export_test.rs  gemini_integration_test.rs
tests/e2e/: web.spec.ts
web/: FROZEN.md  index.html  test.html
web-wasm/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  style.css
web-wasm/js/: download.js  excel-bridge.js  layout-constants.generated.js  pdf-bridge.js  secure-store.js
web-wasm/src/: app.rs  lib.rs  secure_store.rs
web-wasm/src/api/: gemini.rs  gemini_step2.rs  mod.rs
web-wasm/src/components/: export_buttons.rs  header.rs  mod.rs  photo_gallery.rs  progress_bar.rs  settings_panel.rs  upload_area.rs
web-wasm/src/export/: excel_wasm.rs  js_bindings.rs  mod.rs  pdf_wasm.rs
(+17 files in other folders)
