[package]
name = "photo-ai-rust"
version = "0.1.0"
edition = "2021"
description = "工事写真AI解析・写真台帳生成ツール"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# 画像処理
image = "0.25"
base64 = "0.22"
kamadak-exif = "0.5"

# ファイル操作
walkdir = "2"

# HTTP/API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PDF生成
printpdf = "0.7"

# Excel生成
rust_xlsxwriter = "0.79"

# エラー処理
anyhow = "1"
thiserror = "2"

# ユーティリティ
indicatif = "0.17"
rayon = "1"
