[package]
name = "photo-ai-rust"
version = "0.1.0"
edition = "2021"
description = "工事写真AI解析・写真台帳生成ツール"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# 画像処理
image = "0.25"
kamadak-exif = "0.5"

# ファイル操作
walkdir = "2"

# 非同期（CLI出力待ち用）
tokio = { version = "1", features = ["full", "process"] }

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PDF生成（0.8でフォントサブセット化対応）
printpdf = "0.8"

# Excel生成
rust_xlsxwriter = "0.79"

# Excel読み込み
calamine = "0.26"

# エラー処理
anyhow = "1"
thiserror = "2"

# ユーティリティ
indicatif = "0.17"
rayon = "1"
dirs = "5"
