[package]
name = "photo-ai-common"
version = "0.1.0"
edition = "2021"
description = "Photo AI shared types and utilities"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rust_xlsxwriter = { version = "0.92", optional = true }

[features]
default = ["excel"]
excel = ["rust_xlsxwriter"]
wasm = []
